k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-review-backend
  namespace: book-review
spec:
  replicas: 2
  selector:
    matchLabels:
      app: book-review-backend
  template:
    metadata:
      labels:
        app: book-review-backend
    spec:
      containers:
        - name: backend
          image: REPLACE_BACKEND_IMAGE  # will be overridden by kubectl set image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

      restartPolicy: Always
